# pragmatic-reference-game

./: .env  .gitignore  CLAUDE.md  CONTRIBUTION  NOTE  README.md  data_generator.ipynb  demo.py  generate_figures.py  llm_rsa.py  phase1_shizhe_metrics.md  pyproject.toml  reference_game.py  results.json  results_diagnostic_ordinal_6none.txt  results_diagnostic_ordinal_6none_fixed.txt  results_log.txt  results_smoke_6none.txt  run.sh
.claude/: settings.local.json
data/: gemini_exp.jsonl  gemini_exp_test.jsonl  gemini_exp_train.jsonl  gemini_exp_val.jsonl  generated_scenes.jsonl  llava_exp.jsonl  scenes_10_force.jsonl  scenes_10_none.jsonl  scenes_6_force.jsonl  scenes_6_none.jsonl  scenes_8_force.jsonl  scenes_8_none.jsonl  smoke_test.jsonl
data/backup_inverted_loc/: scenes_10_force.jsonl  scenes_6_force.jsonl  scenes_6_none.jsonl  scenes_8_none.jsonl
reference_game_dataset/: dataset.json
reference_game_dataset/.ipynb_checkpoints/: dataset-checkpoint.json
report/: ablations_draft.tex  note.aux  note.out  note.tex  scenes_6_none_table.tex
report/checkpoint/: checkpoint.aux  checkpoint.bbl  checkpoint.blg  checkpoint.out  checkpoint.tex  references.bib
report/final/: final.tex
report/open/: open.tex
results/canonical_vllm_exp/: gemini_exp_test_by_tier.json  gemini_exp_test_records.jsonl  gemini_exp_test_summary.json
scripts/: analyze_results.py  generate_data.py  run_diagnostic.py  run_dialogue_demo.py  run_eval.py  run_final_experiment.py  run_io_index.py  run_speaker_comparison.py  test_speaker_hallucination.py  test_speaker_perception.py
(+102 files in other folders)
